# abacuskit

./: .gitignore  LICENSE  README.md  abacuskit_visual.py  pyproject.toml
abacuskit/: __init__.py  bad_data.py  bader.py  cli.py  cohp.py  mlip_eval.py  plot_style.py
example/: NiBDC_slab.cif
tools/: generate_icon.py
